<resources>
    <string name="app_name">学川教育</string>
    <string name="app_content_heat">https://app1.xuechuanedu.cn</string>
    <string name="http_video_setting">/polyvideosettings/android.json</string>
    <string name="http_url_weixin">/api/auth/login</string>
    <string name="http_url_text">/api/test/post</string>
    <string name="http_token">/api/Service/Refresh</string>
    <string name="http_code">/api/SecurityCode/Send</string>
    <string name="http_register">/api/user/userpost</string>
    <string name="http_login">/api/user/login</string>
    <string name="http_getHot">/api/search/gethot</string>
    <string name="http_getHotkey">/api/search/getsearchkey</string>
    <string name="http_infom">/api/advisory/get</string>
    <string name="http_WenZhan">/api/article/get</string>
    <string name="http_HomePage">/api/homepage/get</string>
    <string name="http_refresh_token">/api/Service/Refresh</string>
    <string name="http_comment">/api/comment/post</string>
    <string name="http_laud">/api/support/post</string>
    <string name="http_favpost">/api/question/favpost</string>
    <string name="http_getarticlelistbytag">/api/Article/getarticlelistbytag</string>
    <string name="http_getarticletag">/api/Article/getarticletag</string>
    <string name="http_getresult">/api/search/getresult</string>
    <string name="http_questionhispost">/api/question/questionhispost</string>
    <string name="http_chapter">/api/standard/getchapter</string>
    <string name="http_article">/api/standard/getarticle</string>
    <string name="http_Course">/api/TextBook/GetCourse</string>
    <string name="http_jiaocaichapter">/api/textbook/getchapter</string>
    <string name="http_coursequestionids">/api/question/getcoursequestionids</string>
    <string name="http_errsetandfav">/api/question/geterrsetandfav</string>
    <string name="http_chapterquestionids">/api/question/getchapterquestionids</string>
    <string name="http_questiontags">/api/question/getquestiontags</string>
    <string name="http_questiontagscount">/api/question/getquestiontagscount</string>
    <string name="http_questiontagids">/api/question/getquestiontagids</string>
    <string name="http_articlecomment">/api/article/getarticlecomment</string>
    <string name="http_homecommentcomment">/api/article/getcommentcomment</string>
    <string name="http_datail">/api/question/getdetail</string>
    <string name="http_questioncmment">/api/question/getquestioncomment</string>
    <string name="http_getdetail">/api/article/getdetail</string>
    <string name="http_commentcomment">/api/question/getcommentcomment</string>
    <string name="http_isbought">/api/question/getisbought</string>
    <string name="http_questionidsbytagid">/api/question/getquestionidsbytagid</string>
    <string name="http_examchapter">/api/question/getexamchapter </string>
    <string name="http_getCnapter">/api/question/getchapter</string>
    <string name="http_questionremoveerrsetpost">/api/question/questionremoveerrsetpost</string>
    <string name="http_questionbankproduct">/api/question/getquestionbankproduct</string>
    <string name="http_getclassandproducts">/api/video/getclass</string>
    <string name="http_getproductdetail">/api/video/getproductdetail</string>
    <string name="http_playprogresspost">/api/video/playprogresspost</string>
    <string name="http_videodownloadpost">/api/video/videodownloadpost</string>
    <string name="http_getproduct">/api/video/getproduct</string>
    <string name="http_getVideo_evalue">/api/video/getvideocomment</string>
    <string name="http_getvideocommentcomment">/api/video/getcommentcomment</string>
    <string name="http_exchangepost">/api/exchangecode/exchangepost</string>
    <string name="http_get_sncode">/api/sncode/get</string>
    <string name="http_post_advice">/api/advice/post</string>
    <string name="http_get_order">/api/order/get</string>
    <string name="http_m_infom">/api/user/getmemberinfo</string>
    <string name="http_m_hear">/api/user/changeheadimg</string>
    <string name="http_m_submitInfom">/api/user/changememberinfo</string>
    <string name="http_m_markorder">/api/order/markorder</string>
    <string name="http_m_membernotification">/api/membernotification/get</string>
    <string name="http_my_msg">/api/membernotification/get</string>
    <string name="http_bindwechat">/api/user/bindwechat</string>
    <string name="http_system_msg">/api/systemnotification/get</string>
    <string name="http_deletenotify">/api/membernotification/deletenotify</string>
    <string name="http_delsystem">/api/systemnotification/deletenotify</string>
    <string name="http_changerpwd">/api/user/userchangepwdpost</string>
    <string name="http_makeorderpost">/api/order/makeorderpost</string>
    <string name="http_pay">/api/pay/post</string>
    <string name="http_upApp">/apks/appversion.json</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tv_search_history">历史记录</string>
    <string name="host_nominate">热门推荐</string>
    <string name="login">登录</string>
    <string name="login_title">登录学川</string>
    <string name="regist_phone">手机注册</string>
    <string name="regist">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password1">忘记密码?</string>
    <string name="please_paw">请输入密码</string>
    <string name="please_new_paw">请输入新密码</string>
    <string name="get_code">获取验证码中..</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_input_pass">请输入用户密码</string>
    <string name="login_loading">登录中...</string>
    <string name="registerOK">注册成功</string>
    <string name="phone1">请输入手机号码</string>
    <string name="phone">手机号码</string>
    <string name="phone_m">手机号</string>
    <string name="user_password">账户密码</string>
    <string name="user_password1">请输入密码</string>
    <string name="or">或</string>
    <string name="code">验证码</string>
    <string name="sure_password">确认密码</string>
    <string name="sure_new_password">确认新密码</string>
    <string name="bingphone">绑定手机号</string>
    <string name="reset_password">重置密码</string>
    <string name="loading">加载中...</string>
    <string name="passundersixt">密码不能低于6位</string>
    <string name="please_login">用户登录过期，请登录</string>
    <string name="please_register">用户还未注册,请注册</string>
    <string name="sms_ok">验证码发送成功</string>
    <string name="sms_ok_repeat">一分钟内同一个手机号不能重新发送</string>
    <string name="sms_fail">短信发送失败</string>
    <string name="phone_register">该手机号已注册</string>
    <string name="location">定位</string>
    <string name="home_teacherMateri">教材</string>
    <string name="home_specs">规范</string>
    <string name="home_infom">推荐资讯</string>
    <string name="home_infom_all">推荐文章</string>
    <string name="please_right_phone">请输入正确的手机号码</string>
    <string name="home_select_content">搜索文章、题库</string>
    <string name="more">更多</string>
    <string name="submit_loading">提交中...</string>
    <string name="submit">提交</string>
    <string name="content_is_empty">内容不能为空</string>
    <string name="mywrongquestion">我的错题</string>
    <string name="bank_my_collect">我的收藏</string>
    <string name="skill_free_composition">自由组卷</string>
    <string name="special_practice">专项练习</string>
    <string name="sequential_exercise">顺序练习</string>
    <string name="_12">12</string>
    <string name="right">正确</string>
    <string name="myError">我的错题</string>
    <string name="MyCollor">收藏题目</string>
    <string name="evalue_empty">暂无评论内容</string>
    <string name="number">数量</string>
    <string name="twentyquestion">20道</string>
    <string name="fiftyquestion">50道</string>
    <string name="hundredquestion">100道</string>
    <string name="difficulty">难度</string>
    <string name="easy">容易</string>
    <string name="medium">中等</string>
    <string name="hard">困难</string>
    <string name="again">从头开始</string>
    <string name="pas_no_same">两次输入密码不一致</string>
    <string name="score">分数</string>
    <string name="answernubmer">答题数目</string>
    <string name="delect_Success">删除成功</string>
    <string name="net_error">网络异常</string>
    <string name="suggest_net">推荐网课</string>
    <string name="my_net">我的网课</string>
    <string name="go_look">去看看</string>
    <string name="user_no_buy">您还未购买课程</string>
    <string name="delect">删除</string>
    <string name="allow">允许</string>
    <string name="cancel">取消</string>
    <string name="cancel_sucess">取消成功</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="start_down">开始下载</string>
    <string name="stopdown">暂停下载</string>
    <string name="company_about">河南学川教育咨询有限公司&#160;&#160;&#160;&#160;版权所有</string>
    <string name="service_agreement">《用户服务协议》</string>
    <string name="about">关于</string>
    <string name="modify_password">修改密码</string>
    <string name="version_update">版本更新</string>
    <string name="bindweixin">绑定微信</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="city">城市</string>
    <string name="your_opinion">您的意见</string>
    <string name="practice_mode">联系方式</string>
    <string name="phoneorweixin">手机/微信</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="submit_success">提交成功</string>
    <string name="feedback_success">提交成功，我们将收到您的反馈</string>
    <string name="submit_error">提交失败</string>
    <string name="setting">设置</string>
    <string name="notification">系统通知</string>
    <string name="feedbBack">用户反馈</string>
    <string name="proving">辅导书正版验证</string>
    <string name="authentic_verification">正版验证</string>
    <string name="value_added_service">购辅导书赠送增值服务</string>
    <string name="addvuale">增值服务</string>
    <string name="myorder">我的订单</string>
    <string name="mydown">我的缓存</string>
    <string name="mymsg">我的消息</string>
    <string name="code_empty">兑换码不能为空</string>
    <string name="code_error">兑换失败</string>
    <string name="code_suceess">兑换成功</string>
    <string name="code_empty1">请输入验证码</string>
    <string name="persion">个人资料</string>
    <string name="shill_text">技术实务题库</string>
    <string name="collortext">综合能力题库</string>
    <string name="casetext">案例分析题库</string>
    <string name="thiry">￥30</string>
    <string name="y">￥</string>
    <string name="y1">-￥</string>
    <string name="playtype">支付方式</string>
    <string name="weixin">微信</string>
    <string name="zhifubao">支付宝</string>
    <string name="submit_from">提交订单</string>
    <string name="pay_type">请选择支付方式</string>
    <string name="no_down_video">没有任务要下载</string>
    <string name="paysuccess">支付成功</string>
    <string name="pay_error">支付失败</string>
    <string name="surefrom">确认订单</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="buySuccess">购买成功</string>
    <string name="buyError">购买失败</string>
    <string name="buyStauts">购买结果</string>
    <string name="name_empty">名字不能为空</string>
    <string name="sava_success">保存成功</string>
    <string name="save_errror">保存失败</string>
    <string name="order_code">订单编号:</string>
    <string name="order_code1">订单编号</string>
    <string name="total">总计</string>
    <string name="pay_money">付款</string>
    <string name="cancel_order">取消订单</string>
    <string name="preferential">优惠</string>
    <string name="delect_order">删除订单</string>
    <string name="weixin_installed">请先安装微信客户端</string>
    <string name="title_activity_my_order_infom">MyOrderInfomActivity</string>
    <string name="order_detail">订单详情</string>
    <string name="ware_name">商品名称</string>
    <string name="order_time">下单时间</string>
    <string name="order_price">订单金额</string>
    <string name="paytype">支付方式</string>
    <string name="changerrpaw">修改密码</string>
    <string name="rawpaw">原密码</string>
    <string name="newpaw">新密码</string>
</resources>