<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_icon_eyeable" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/home_infom"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />
         <Button
             android:id="@+id/btn_infom_more"
             android:textColor="@color/text_color"
             android:drawableRight="@mipmap/back"
             android:text="@string/more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rlv_recommend_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/login_icon_eyeable" />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/home_infom_all"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />
       <Button
           android:id="@+id/btn_article_more"
           android:text="@string/more"
           android:textColor="@color/text_color"
           android:drawableRight="@mipmap/back"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rlv_recommend_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>